# ChangeLog for sys-devel/gcc-apple
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Nov 2007; Fabian Groffen <grobian@gentoo.org>
  gcc-apple-4.0.1_p5363-r1.ebuild, gcc-apple-4.0.1_p5465.ebuild,
  gcc-apple-4.0.1_p5465.ebuild, gcc-apple-4.2.1_p5531.ebuild:
  Cleaned up ebuilds, keyworded 4.2.1_p5531 ~ppc-macos, compiles on 10.4 after
  removing any -m* flags.

*gcc-apple-4.2.0_p5531 (02 Nov 2007)
*gcc-apple-4.0.1_p5465 (02 Nov 2007)

  02 Nov 2007; Fabian Groffen <grobian@gentoo.org>
  +gcc-apple-4.0.1_p5465.ebuild, +gcc-apple-4.2.0_p5531.ebuild:
  Adding gcc-apple versions as released in 10.5, both don't compile on 10.4,
  removed all keywords

  19 Oct 2007; Fabian Groffen <grobian@gentoo.org>
  gcc-apple-4.0.1_p5363-r1.ebuild:
  Slight change to make gcc use Darwin libtool also in a cross-compile
  environment.

  10 Dec 2006; Fabian Groffen <grobian@gentoo.org> +metadata.xml:
  Add metadata.xml

  24 Nov 2006; Fabian Groffen <grobian@gentoo.org>
  gcc-apple-4.0.1_p5363-r1.ebuild:
  Don't install libiberty.a as this prevents installing multiple compilers
  and isn't stricktly necessary.

*gcc-apple-4.0.1_p5363-r1 (23 Nov 2006)
*gcc-apple-3.5.0_p3506-r1 (23 Nov 2006)

  23 Nov 2006; Fabian Groffen <grobian@gentoo.org>
  -gcc-apple-3.3_p1819.ebuild, -gcc-apple-3.5.0_p3506.ebuild,
  +gcc-apple-3.5.0_p3506-r1.ebuild, -gcc-apple-4.0.1_p5363.ebuild,
  +gcc-apple-4.0.1_p5363-r1.ebuild:
  Removed 3.3 as it doesn't compile anyway, fixed 3.5.0 and 4.0.1 to use
  --enable-version-specific-runtime-libs which installs runtime-libs, such as
  libstdc++ and libgcc_s into usr/lib/${CHOST}/gcc/${VER}

*gcc-apple-4.0.1_p5363 (10 Nov 2006)
*gcc-apple-3.5.0_p3506 (10 Nov 2006)
*gcc-apple-3.3_p1819 (10 Nov 2006)

  10 Nov 2006; Fabian Groffen <grobian@gentoo.org>
  +files/gcc-apple-5363-native-64bits.patch, +gcc-apple-3.3_p1819.ebuild,
  +gcc-apple-3.5.0_p3506.ebuild, +gcc-apple-4.0.1_p5363.ebuild,